[package]
name = "views"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"

log = "0.4.17"
winit = "0.28.3"

wasm-bindgen = "0.2.84"

js-sys = "0.3.61"
yew-router = "0.17.0"

wgpu = { version = "0.15.1", features = ["webgl"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

wasm-bindgen-futures = "0.4.34"
yew = { version = "0.20.0", features = ["csr"] }
cgmath = "0.18.0"
serde = "1.0.159"
async-std = "1.12.0"

painting = { git = "https://gitee.com/ghostminer/painting.git", features = ["webgl"] }

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
